fix some overflow

--- a/style.css
+++ b/style.css
@@ -168,3 +168,11 @@
   .pdfs:hover {
     font-weight: 700;
   }
+
+ @media (max-width:480px){
+
+    .badge-base{
+        display: none;
+    }
+
+}
